# egret

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/benchmarks/: benchmark_apply.py
cpp/include/egret/: basearray.hpp  coordinate.hpp  coordinatearray.hpp  dipole.hpp  dispersion.hpp  dispersionarray.hpp  drift.hpp  drift_util.hpp  element.hpp  envelope.hpp  envelopearray.hpp  lattice.hpp  nonlinearmultipole.hpp  object.hpp  octupole.hpp  quadrupole.hpp  ring.hpp  sextupole.hpp  steering.hpp  version.hpp.in
cpp/src/: basearray.cpp  bindings.cpp  cli_quadrupole.cpp  coordinate.cpp  coordinatearray.cpp  dipole.cpp  dispersionarray.cpp  drift.cpp  element.cpp  envelope.cpp  envelopearray.cpp  lattice.cpp  nonlinearmultipole.cpp  octupole.cpp  quadrupole.cpp  ring.cpp  sextupole.cpp  steering.cpp
cpp/tests/: compare_cli_quadrupole.py  test_parity_pyegret.py  test_parity_quadrupole.py  test_transfer_from_s_parity_cppwrapper.py
egret/: __init__.py  _pyegret_bridge.py  betafunc.py  coordinate.py  coordinatearray.py  cppegret.pyi  dipole.py  dispersion.py  dispersionarray.py  drift.py  element.py  envelope.py  envelopearray.py  lattice.py  object.py  octupole.py  quadrupole.py  readring.py  ring.py  sextupole.py  steering.py
egret/base/: __init__.py  basearray.py  basecoordinate.py  coordinate.py  coordinatearray.py  dipole.py  dispersion.py  dispersionarray.py  drift.py  element.py  envelope.py  envelopearray.py  lattice.py  nonlinearmultipole.py  object.py  octupole.py  quadrupole.py  ring.py  sextupole.py  steering.py
egret/cpp/: __init__.py  basearray.py  coordinate.py  coordinatearray.py  dipole.py  dispersion.py  dispersionarray.py  drift.py  element.py  envelope.py  envelopearray.py  lattice.py  nonlinearmultipole.py  object.py  octupole.py  quadrupole.py  ring.py  sextupole.py  steering.py
egret/python/: __init__.py  basearray.py  coordinate.py  coordinatearray.py  dipole.py  dispersion.py  dispersionarray.py  drift.py  element.py  envelope.py  envelopearray.py  lattice.py  nonlinearmultipole.py  object.py  octupole.py  quadrupole.py  readring.py  ring.py  sextupole.py  steering.py
scripts/: sync_version.py
src/: __init__.py  dipole.py  drift.py  element.py  object.py  octupole.py  quadrupole.py  sextupole.py
tests/: test_pyegret_pickle.py  test_pyegret_trampoline.py
